<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8A39D"
    android:contentDescription="@string/app_name">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorInputLayout"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genreInputLayout"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/genreInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_genre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/synopsisInputLayout"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/synopsisInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_synopsis" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quoteInputLayout"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quoteInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_quote" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#8d7966"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quoteInputLayout">

        <ImageButton
            android:id="@+id/oneStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="#8D7966"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/fiveStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#8D7966"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/threeStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8D7966"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fiveStarButton"
            app:layout_constraintStart_toEndOf="@+id/oneStarButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/twoStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8D7966"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/threeStarButton"
            app:layout_constraintStart_toEndOf="@+id/oneStarButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/fourStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8D7966"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fiveStarButton"
            app:layout_constraintStart_toEndOf="@+id/threeStarButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addPicButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/add_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <Button
        android:id="@+id/confirmBookAddButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:text="@string/add_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="135dp"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>